@@ -19,17 +19,19 @@ extern "C" {
 #include <dds/Version.h>
 
 #ifndef ENABLE_STATIC
-G_MODULE_EXPORT extern "C"
-const gchar version[] = DDS_VERSION;
+extern "C"
+G_MODULE_EXPORT const gchar version[] = DDS_VERSION;
 
-G_MODULE_EXPORT extern "C" void
+extern "C"
+G_MODULE_EXPORT void
 plugin_register()
 {
   extern void proto_register_odds();
   proto_register_odds();
 }
 
-G_MODULE_EXPORT extern "C" void
+extern "C"
+G_MODULE_EXPORT void
 plugin_reg_handoff()
 {
   extern void proto_reg_handoff_odds();
